# hijaiyyahtech

./: .gitignore  .gitmodules  HGSS_COMPLETION_SUMMARY.md  Makefile  README.md  README_NEW.md  REPO_MAP.md  RUNBOOK.md  hijaiyyahcodex  pytest.ini  requirements-ci.txt  temp_page.html
AuditorBundle/hl18/: README.md  pyproject.toml
AuditorBundle/hl18/release/HL-18-v1.0+local.1/: HL18_release_integrity.json  HL18_release_integrity.yaml
AuditorBundle/hl18/specs/: HISA_integration_local.yaml
AuditorBundle/hl18/src/hijaiyahlang/: cli.py  (+11 more)
AuditorBundle/hl18/tests/: test_core_smoke.py  test_hb_binary_json.py  test_hl_regression.py  test_hvm.py  test_witness_hole.py
hgss-hc18dc/: AUDITORS_QUICKSTART.md  PRODUCTION_RELEASE_CERTIFICATE.md  RELEASE_ATTESTATION.md  WALKTHROUGH_HGSS.md  audit_demo_plan.md  audit_report.md  implementation_plan.md  pyproject.toml  task.md
hgss-hc18dc/artifacts/: lease_input.json  trace.jsonl
hgss-hc18dc/audit/: auditlog.jsonl
hgss-hc18dc/examples/hcvm/: hgss_cluster_demo_words.json  lease_evidence_example.json
hgss-hc18dc/spec/: AUDIT_EVIDENCE_SCHEMA.md  HCVM_ISA.md  HGSS_EVIDENCE_AGENT_SUITE_SPEC.md  HSM_INTEGRATION.md  LEASE_AUTH_SIGNATURE.md  LEASING_SERVICE_ARCHITECTURE.md  MONITORING_RUNBOOK.md  NONCE_RANGE_LEASING_PROTOCOL.md  PRODUCTION_INTEGRATION_GUIDE.md
hgss-hc18dc/tests/: test_full_hgss_pipeline.py  test_hsm_provider_contract.py  test_lease_signature_verification.py
hgss-hc18dc/tools/: check_release_lock.py  hcvm_run.py  hgss_make_example_event.py  hgss_verify_evidence.py  lease_authority_issue.py  print_release_state.py
(+322 files in other folders)
